@@ -476,6 +476,98 @@ if|if
 condition|(
 name|value
 operator|instanceof
+name|List
+condition|)
+block|{
+name|List
+name|list
+init|=
+operator|(
+name|List
+operator|)
+name|value
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|list
+operator|.
+name|isEmpty
+argument_list|()
+operator|&&
+name|list
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|instanceof
+name|Map
+condition|)
+block|{
+comment|//this is a subcomponent
+for|for
+control|(
+name|Object
+name|o
+range|:
+name|list
+control|)
+block|{
+if|if
+condition|(
+name|o
+operator|instanceof
+name|Map
+condition|)
+name|o
+operator|=
+operator|new
+name|NamedList
+argument_list|<>
+argument_list|(
+operator|(
+name|Map
+operator|)
+name|o
+argument_list|)
+expr_stmt|;
+name|initArgs
+operator|.
+name|add
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|o
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|initArgs
+operator|.
+name|add
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|value
+operator|instanceof
 name|Map
 condition|)
 name|value
@@ -501,6 +593,7 @@ argument_list|,
 name|value
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|this
 operator|.
