@@ -2541,6 +2541,144 @@ argument_list|,
 literal|10
 argument_list|)
 expr_stmt|;
+name|payload
+operator|=
+literal|"{\n"
+operator|+
+literal|"    'add-requesthandler': {\n"
+operator|+
+literal|"        name : '/dump100',\n"
+operator|+
+literal|"        class : 'org.apache.solr.handler.DumpRequestHandler',"
+operator|+
+literal|"        suggester: [{name: s1,lookupImpl: FuzzyLookupFactory, dictionaryImpl : DocumentDictionaryFactory},"
+operator|+
+literal|"                    {name: s2,lookupImpl: FuzzyLookupFactory , dictionaryImpl : DocumentExpressionDictionaryFactory}]"
+operator|+
+literal|"    }\n"
+operator|+
+literal|"}"
+expr_stmt|;
+name|runConfigCommand
+argument_list|(
+name|writeHarness
+argument_list|,
+literal|"/config?wt=json"
+argument_list|,
+name|payload
+argument_list|)
+expr_stmt|;
+name|map
+operator|=
+name|testForResponseElement
+argument_list|(
+name|writeHarness
+argument_list|,
+name|testServerBaseUrl
+argument_list|,
+literal|"/config?wt=json"
+argument_list|,
+name|cloudSolrClient
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"config"
+argument_list|,
+literal|"requestHandler"
+argument_list|,
+literal|"/dump100"
+argument_list|,
+literal|"class"
+argument_list|)
+argument_list|,
+literal|"org.apache.solr.handler.DumpRequestHandler"
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|map
+operator|=
+name|getRespMap
+argument_list|(
+literal|"/dump100?wt=json&json.nl=arrmap&initArgs=true"
+argument_list|,
+name|writeHarness
+argument_list|)
+expr_stmt|;
+name|List
+name|initArgs
+init|=
+operator|(
+name|List
+operator|)
+name|map
+operator|.
+name|get
+argument_list|(
+literal|"initArgs"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|initArgs
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|(
+operator|(
+name|Map
+operator|)
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|)
+operator|.
+name|containsKey
+argument_list|(
+literal|"suggester"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|(
+operator|(
+name|Map
+operator|)
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|)
+operator|.
+name|containsKey
+argument_list|(
+literal|"suggester"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|map
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testForResponseElement
 specifier|public
